Apply automatic pull for AudioWorkletNode with zero output

Spec: https://webaudio.github.io/web-audio-api/#rendering-loop (Step 9.5)

The AudioWorkletNode with zero output must be pulled by the renderer.
The actual output will be ignored just like AnalyserNode.

Bug: 831245
Test: LayoutTests/external/wpt/webaudio/the-audio-api/the-audioworklet-interface/audioworkletnode-automatic-pull.https.html
Change-Id: If9bd27d6c4bfeecdcd2dd4c8445459afd8593e85
Reviewed-on: https://chromium-review.googlesource.com/1014388
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Commit-Queue: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551210}